--- a/service/package.json
+++ b/service/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "express": "~3.4.6",
     "q": "~0.9.7",
-    "sage": "~0.4.2"
+    "sage": "~0.4.2",
+    "swagger-node-express": "~1.3.2"
   },
   "devDependencies": {
     "should": "~2.1.1",
