--- a/service/package.json
+++ b/service/package.json
@@ -25,7 +25,9 @@
     "express": "~3.4.6",
     "q": "~0.9.7",
     "sage": "~0.4.2",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "passport": "~0.1.17",
+    "passport-google": "~0.3.0"
   },
   "devDependencies": {
     "should": "~2.1.1",
