--- a/service/package.json
+++ b/service/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "express": "~3.4.6",
     "q": "~0.9.7",
-    "elasticsearch": "~1.0.3"
+    "elasticsearch": "~1.0.3",
     "sage": "~0.4.2",
     "lodash": "~2.4.1",
     "passport": "~0.1.17",
