--- a/service/package.json
+++ b/service/package.json
@@ -25,7 +25,9 @@
     "express": "~3.4.6",
     "q": "~0.9.7",
     "lodash": "~2.4.1",
-    "elasticsearch": "~1.0.3"
+    "elasticsearch": "~1.0.3",
+    "passport": "~0.2.0",
+    "passport-google": "~0.3.0"
   },
   "devDependencies": {
     "should": "~2.1.1",
