--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
     - '0.10'
+
+services:
+    - elasticsearch
+
 before_install:
     - "export DISPLAY=:99.0"
     - "sh -e /etc/init.d/xvfb start"
@@ -11,13 +15,21 @@ install:
     - npm install
     - cd ../static
     - npm install
-    - npm install -g bower grunt-cli
+    - npm install -g bower grunt-cli mocha
     - bower install
 
 before_script:
     - cd app/scripts/
     - cp config.js.example config.js
-    - cd ../../
+    - cd ../../../service
+    - cp config.js.example config.js
+    - cd ../scripts/elastic
+    - curl -fsSkL --retry 9 --retry-delay 9 -XPUT 127.0.0.1:9200/_template/template_1 -d @retro_template_es.json
+    - curl -fsSkL --retry 9 --retry-delay 9 -XPUT 127.0.0.1:9200/retrospectives_22012014
 
 script:
+    - cd ../static
     - npm test
+    - cd ../service
+    - npm start
+    - mocha
