--- a/service/package.json
+++ b/service/package.json
@@ -25,7 +25,8 @@
     "express": "~3.4.6",
     "q": "~0.9.7",
     "lodash": "~2.4.1",
-    "elasticsearch": "~1.0.3"
+    "elasticsearch": "~1.0.3",
+    "express-hal": "0.0.1"
   },
   "devDependencies": {
     "should": "~2.1.1",
