--- a/service/package.json
+++ b/service/package.json
@@ -26,7 +26,8 @@
     "q": "~0.9.7",
     "lodash": "~2.4.1",
     "elasticsearch": "~1.0.3",
-    "kafka-node": "~0.1.0"
+    "kafka-node": "~0.1.0",
+    "socket.io": "~0.9.16"
   },
   "devDependencies": {
     "should": "~2.1.1",
