Testing Winston-Logstash

--- a/service/config.js.example
+++ b/service/config.js.example
@@ -6,6 +6,11 @@ var development = {
     'app': {
         'host':'localhost',
         'port': 3000
+    },
+    logstash: {
+      host: '127.0.0.1',
+      port: 28777,
+      node_name: 'api-retrospectacular'
     }
 },
 
