--- a/service/package.json
+++ b/service/package.json
@@ -25,10 +25,12 @@
     "express": "~3.4.6",
     "q": "~0.9.7",
     "elasticsearch": "~1.0.3",
-    "sage": "~0.4.2",
     "lodash": "~2.4.1",
     "passport": "~0.1.17",
-    "passport-google": "~0.3.0"
+    "passport-google": "~0.3.0",
+    "connect-redis": "~1.4.7",
+    "redis": "~0.10.1",
+    "hiredis": "~0.1.16"
   },
   "devDependencies": {
     "should": "~2.1.1",
