--- a/static/package.json
+++ b/static/package.json
@@ -42,7 +42,8 @@
     "karma": "~0.10.8",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "bower": "~1.2.8",
-    "grunt-cli": "~0.1.13"
+    "grunt-cli": "~0.1.13",
+    "grunt-hashres": "~0.4.1"
   },
   "engines": {
     "node": ">=0.8.0"
