--- a/static/bower.json
+++ b/static/bower.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.2.12",
-    "angular-scenario": "~1.2.12"
+    "angular-scenario": "~1.2.12",
+    "gremlins.js": "~0.1.0"
   }
 }
