--- a/service/package.json
+++ b/service/package.json
@@ -28,7 +28,8 @@
     "elasticsearch": "~1.0.3",
     "express-winston": "~0.2.5",
     "winston": "~0.7.2",
-    "newrelic": "~1.3.2"
+    "newrelic": "~1.3.2",
+    "cluster": "^0.7.7"
   },
   "devDependencies": {
     "should": "~2.1.1",
