--- a/service/package.json
+++ b/service/package.json
@@ -30,10 +30,10 @@
     "winston": "~0.7.2"
   },
   "devDependencies": {
-    "should": "~2.1.1",
-    "coffee-script": "~1.6.3",
-    "mocha": "~1.15.1",
-    "supertest": "~0.8.2"
+    "coffee-script": "^1.7.1",
+    "mocha": "^1.18.2",
+    "should": "^3.3.1",
+    "supertest": "^0.12.0"
   },
   "optionalDependencies": {
     "newrelic": "~1.4.0"
