--- a/static/package.json
+++ b/static/package.json
@@ -49,6 +49,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "node_modules/.bin/bower install; node_modules/.bin/grunt"
+    "postinstall": "node_modules/.bin/bower cache clean; node_modules/.bin/bower install; node_modules/.bin/grunt"
   }
 }
